--- a/index.ipynb
+++ b/index.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,9 +164,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ruby\n",
+      "JavaScript\n",
+      "SQL\n",
+      "Java\n",
+      "JavaScript\n",
+      "Elixir\n",
+      "Python\n",
+      "C#\n",
+      "CoffeeScript\n",
+      "R\n",
+      "C++\n",
+      "PHP\n",
+      "Swift\n"
+     ]
+    }
+   ],
    "source": [
     "for programmer in programmers:\n",
     "    for language in programmer['favorite_languages']:\n",
